--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,13 @@ services:
       DDBB_PASSWORD: pwa123
     ports:
       - 8000:80
+
+  PHPMyAdmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_USER: pwauser
+      PMA_PASSWORD: pwa123
+    ports:
+      - 8001:80
